package adapter;

public interface JsonService {

    void processJson(String json);

}