package adapter;

public class XmlService {

    public void processXml(String xml) {
        System.out.println("Processing XML: " + xml);
    }

}